# tte-agent-agora

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RESULTS_NARRATIVE.md  agent_readme_probe.md  agent_readme_tte1.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  feature.yml
.github/workflows/: ci.yml
data/: frozen_corpus_studies.jsonl
docs/: ARCHITECTURE.md  TIMING.md
examples/: corpus_demo.py  mgb_extract_sample.sql  realcode_smoke.py  run_triage_catalog.py  sepsis_vignette.py
paper/: RESULTS.md
scripts/: sanity_check_corpus.py
src/tteEngine/: __init__.py  adjustability.py  context.py  live_run.py  matching.py  measurability.py  missingness.py  (+3 more)
tests/: test_adjustability.py  test_audit.py  test_benchmark.py  test_calibration.py  test_cohort.py  test_cohort_resolver.py  test_common_format.py  test_confounder_measurability.py  test_consort.py  test_context.py  test_contracts.py  test_contracts_io.py  test_corpus.py  test_corpus_jsonl.py  test_ctgov_corpus.py  test_ctgov_eligibility.py  test_ctgov_intelligence.py  test_ctgov_reader.py  test_ctgov_spec.py  test_drivers.py  test_drug_prepass.py  test_dx_cohort_matching.py  test_eicu_adapter.py  test_eligibility_measurable.py  test_emulability_downrank.py  test_engine_provider.py  test_figures.py  test_icu_anchor.py  test_lab_demo_matching.py  test_live_loader.py  test_live_run.py  test_matching.py  test_measurability.py  test_med_emit.py  test_meta.py  test_mgb_adapter.py  test_mgb_codegen.py  test_mimic_adapter.py  test_missingness.py  test_orchestration.py  (+19 more)
web/: results_app.py  theme.py
(+59 files in other folders)
